# usaco-standings-bot

./: .rustfmt.toml  Cargo.toml  LICENSE-APACHE  Procfile  README.md
.github/workflows/: scrape.yml
src/: database.rs  main.rs
usaco-standings-scraper/: Cargo.toml  README.md
usaco-standings-scraper/examples/: scrape.rs
usaco-standings-scraper/src/: lib.rs
