[package]
name = "usaco-standings-scraper"
version = "0.1.0"
edition = "2021"
authors = ["skittles1412"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/skittles1412/usaco-standings-bot"
description = """A web scraper for past USACO results."""

[dependencies]
anyhow = "1.0.95"
http = "1.2.0"
scraper = "0.22.0"
serde = { version = "1.0.216", features = ["derive"], optional = true }
tokio = { version = "1.42.0", features = ["macros", "rt"] }
tracing = "0.1.41"
url = "2.5.4"

[features]
default = ["serde"]

[dev-dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.11", features = ["gzip", "brotli", "deflate", "zstd", "http2"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
